tests/sema/fail/v7_fail_map_init_key_type.ep
# COMPILE_FAIL: map init key expected str
fun main(): void {
    let m = new map[str]i64 { 1: 2 }
}
